--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "cookie": "^0.7.2",
     "cookie-parser": "^1.4.7",
     "cookie-signature": "^1.2.2",
+    "cors": "^2.8.5",
     "debug": "^4.4.1",
     "depd": "^2.0.0",
     "dotenv": "^17.2.1",
@@ -147,7 +148,6 @@
     "wrappy": "^1.0.2",
     "xtend": "^4.0.2"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
